--- a/styles.css
+++ b/styles.css
@@ -55,24 +55,24 @@ body{
     text-align: left
 }
 
-.index-div{
-display:inline-flex;
-justify-content: center;
-justify-items: center;
-flex-wrap: center;
-align-items: center;
-flex: 2;
-margin-bottom: 2%;
-margin-left: 3.5%;
-margin-block-start: 6%;
-margin-block-end: 6%;
-width: 28%;
-height: 200px;
-font-family: Roboto Mono;
-font-size: 25px;
-font-weight: 700;
-border-radius: 25px;
-
+.index-div {
+    display:inline-flex;
+    justify-content: center;
+    justify-items: center;
+    flex-wrap: center;
+    align-items: center;
+    flex: 2;
+    margin:3%;
+    /* margin-bottom: 2%;
+    margin-left: 3.5%; */
+    /* margin-block-start: 6%; */
+    /*margin-block-end: 6%;*/
+    width: 90%;
+    height: 200px;
+    font-family: Roboto Mono;
+    font-size: 25px;
+    font-weight: 700;
+    border-radius: 25px;
 }
 
 a:link {
@@ -231,3 +231,9 @@ form {
     color:#132932
 }
 
+@media screen and (min-width: 780px) {
+.index-div{
+    width: 28%;
+    margin: 3% 0;
+}    
+}
