--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ Light Gray: f4f4f4 */
     font-family: Roboto Mono;
     font-size: 12pt;
     text-align: right;
-    padding: 0 25px 0 25px;
+    padding: 0px 25px 10px 25px;
     border-radius: 25px;
 }
 
@@ -38,20 +38,26 @@ body{
     background-color: #f4f4f4;
 }
 
-/*div{
-    background-color: #B4ADEA;
-}*/
-
 .banner-image {
     width: 100%;
-    height: 10%;
+    height: 20%;
     border-radius: 25px;
+    object-fit: cover;
+    padding-top: 20px;
+}
+
+.index-image {
+    width: 100%;
+    height: 20%;
+    border-radius: 25px;
+    object-fit: cover;
+    padding-top: 20px;
 }
 /* INDEX STYLING*/
 
 #logo-image{
-    length: 10%;
-    width: 10%;
+    length: 85px;
+    width: 85px;
     text-align: left
 }
 .whole-div{
@@ -122,6 +128,10 @@ a:hover {
     border: 4px solid #ceaa98;
 }
 
+.link-logos{
+    text-align: center;
+}
+
 /* ABOUT ME STYLING*/
 
 h1 {
@@ -129,6 +139,7 @@ h1 {
     font-family: Ms Madi;
     font-size: 48pt;
     color:#ceaa98;
+    margin: 5%;
 }
 
 h2 {
@@ -136,6 +147,7 @@ h2 {
     font-family: Roboto Mono;
     font-size: 14pt;
     color: #132932;
+    margin:5%
 }
 
 p{
@@ -150,6 +162,8 @@ li{
     text-align: justify;
     font-family: Roboto Mono;
     font-size: 12pt;
+    color: #132932;
+    padding: 2%;
 }
 
 /* WHAT'S THE STACK STYLING*/
@@ -191,12 +205,12 @@ form {
     flex-basis: 150px;
     font-size: 22px;
     font-family: Roboto Mono;
+    text-align: left;
 }
 
 .form-item input,
 .form-item textarea {
-    flex-basis: 50%;
-    /*border: 4px solid #FFC6AC;*/
+    flex-basis: 75%;
     font-family: Roboto Mono;
     border-radius: 25px;
 }
@@ -238,25 +252,144 @@ form {
 
 /* RECOMMENDATIONS STYLING*/
 
+.Recommendation-Intro h1{
+font-family: Roboto Mono;
+font-size: 28pt;
+}
+
 .Podcasts{
     background-color: #ffece2;
+    border-radius: 25px;
+    margin: 10px 30px 10px 30px;
+    padding: 10px;
+    font-size: 8pt;
+}
+
+.Podcasts h1{
+    font-style: italic;
+    text-decoration: underline;
 }
 
 .TV{
     background-color:#607668;
-    color:#f4f4f4;
+    border-radius: 25px;
+    margin: 10px 30px 10px 30px;
+    padding: 10px;
 }
 
 .Books{
     background-color:#ffece2;
+    border-radius: 25px;
+    margin: 10px 30px 10px 30px;
+    padding: 10px;
 }
 
 .Movies{
     background-color: #607668;
-    color:#f4f4f4;
+    border-radius: 25px;
+    margin: 10px 30px 10px 30px;
+    padding: 10px;
 }
 
 
+/* WHAT'S THE STACK STYLING*/
+
+.card {
+    border: 2px solid #132932;
+    width: 90%;
+    padding: 15px;
+    display:block;
+    text-align: center;
+    vertical-align: middle;
+    margin: 20px 30px 10px 30px;
+    height: 475px;
+    background-color: #f1f1f1;
+    object-fit: contain;
+    border-radius: 25px;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 10px #bebdbd;
+    border: 4px solid #ceaa98;
+}
+
+.card img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 25px;
+}
+
+.card h2 {
+    display: inline-block;
+}
+
+.card .sub-card-heading {
+    color: #132932;
+    font-size: 24pt;
+}
+
+
+.card a {
+    line-height: 12pt;
+    display: block;
+    color: #132932;
+    font-size: 24pt;
+    font-family: Ms Madi;
+}
+
+.card p {
+    color: #4e4e4e;
+}
+
+/* PROJECTS STYLING*/
+
+.card-projects {
+    border: 2px solid #132932;
+    width: 90%;
+    padding: 15px;
+    display:block;
+    text-align: center;
+    vertical-align: middle;
+    margin: 20px 30px 10px 30px;
+    height: 500px;
+    background-color: #f1f1f1;
+    object-fit: contain;
+    border-radius: 25px;
+}
+
+.card-projects:hover {
+    box-shadow: 0px 0px 10px #bebdbd;
+}
+
+.card-projects img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 25px;
+}
+
+.card-projects h2 {
+    display: inline-block;
+}
+
+.card-projects .sub-card-heading {
+    color: #132932;
+    font-size: 24pt;
+}
+
+
+.card-projects a {
+    line-height: 12pt;
+    display: block;
+    color: #132932;
+    font-size: 24pt;
+    font-family: Ms Madi;
+}
+
+.card-projects p {
+    color: #4e4e4e;
+}
 
 
 @media screen and (min-width: 780px) {
@@ -274,4 +407,6 @@ form {
     a:link{
         font-size: 100%;
     }
+
+
 }
