--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,10 @@ Light Gray: f4f4f4 */
     background-color:#ffece2;
     color:#132932;
     font-family: Roboto Mono;
-    font-size: 12pt;
     text-align: right;
     padding: 0px 25px 10px 25px;
     border-radius: 25px;
+    font-size: 12pt;
 }
 
 .logo{
@@ -31,7 +31,7 @@ Light Gray: f4f4f4 */
     font-family: Roboto Mono;
     font-size: 12pt;
     text-align: left;
-    padding: 0 25px 0 25px;
+    padding: 0 5px 0 0px;
 }
 
 body{
@@ -52,6 +52,13 @@ body{
     border-radius: 25px;
     object-fit: cover;
     padding-top: 20px;
+}
+
+footer{
+    font-family: Roboto Mono;
+    font-size: 6pt;
+    color:#bebdbd;
+    text-align: center;
 }
 /* INDEX STYLING*/
 
@@ -137,7 +144,7 @@ a:hover {
 h1 {
     text-align: center;
     font-family: Ms Madi;
-    font-size: 48pt;
+    font-size: 24pt;
     color:#ceaa98;
     margin: 5%;
 }
@@ -145,7 +152,7 @@ h1 {
 h2 {
     text-align: center;
     font-family: Roboto Mono;
-    font-size: 14pt;
+    font-size: 12pt;
     color: #132932;
     margin:5%
 }
@@ -153,7 +160,7 @@ h2 {
 p{
     text-align: justify;
     font-family: Roboto Mono;
-    font-size: 12pt;
+    font-size: 10pt;
     color: 132932;
     margin: 5%;
 }
@@ -254,7 +261,7 @@ form {
 
 .Recommendation-Intro h1{
 font-family: Roboto Mono;
-font-size: 28pt;
+font-size: 14pt;
 }
 
 .Podcasts{
@@ -301,8 +308,8 @@ font-size: 28pt;
     display:block;
     text-align: center;
     vertical-align: middle;
-    margin: 20px 30px 10px 30px;
-    height: 475px;
+    margin: 30px 1px 30px 1px;
+    height: 330px;
     background-color: #f1f1f1;
     object-fit: contain;
     border-radius: 25px;
@@ -315,18 +322,19 @@ font-size: 28pt;
 
 .card img {
     width: 100%;
-    height: 300px;
-    object-fit: cover;
+    height: 200px;
+    object-fit:cover;
     border-radius: 25px;
 }
 
 .card h2 {
     display: inline-block;
+    font-size: 12pt;
 }
 
 .card .sub-card-heading {
     color: #132932;
-    font-size: 24pt;
+    font-size: 12pt;
 }
 
 
@@ -334,7 +342,7 @@ font-size: 28pt;
     line-height: 12pt;
     display: block;
     color: #132932;
-    font-size: 24pt;
+    font-size: 18pt;
     font-family: Ms Madi;
 }
 
@@ -346,13 +354,13 @@ font-size: 28pt;
 
 .card-projects {
     border: 2px solid #132932;
-    width: 90%;
+    width: 80%;
     padding: 15px;
     display:block;
     text-align: center;
-    vertical-align: middle;
-    margin: 20px 30px 10px 30px;
-    height: 500px;
+    margin:auto;
+    margin-bottom: 15px;
+    height: 350px;
     background-color: #f1f1f1;
     object-fit: contain;
     border-radius: 25px;
@@ -364,7 +372,7 @@ font-size: 28pt;
 
 .card-projects img {
     width: 100%;
-    height: 300px;
+    height: 200px;
     object-fit: cover;
     border-radius: 25px;
 }
@@ -408,5 +416,54 @@ font-size: 28pt;
         font-size: 100%;
     }
 
+    .card-projects {
+        border: 2px solid #132932;
+        width: 90%;
+        padding: 15px;
+        display:block;
+        text-align: center;
+        vertical-align: middle;
+        margin: 10px 35px 10px 35px;
+        height: 520px;
+        background-color: #f1f1f1;
+        object-fit: contain;
+        border-radius: 25px;
+    }
+
+    .card-projects img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 25px;
+    }
+
+    .card img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 25px;
+    }
+
+    .card {
+        border: 2px solid #132932;
+        width: 90%;
+        padding: 15px;
+        display:block;
+        text-align: center;
+        vertical-align: middle;
+        margin: 15px 35px 15px 35px;
+        height: 500px;
+        background-color: #f1f1f1;
+        object-fit: contain;
+        border-radius: 25px;
+    }
+
+    h1 {
+        text-align: center;
+        font-family: Ms Madi;
+        font-size: 48pt;
+        color:#ceaa98;
+        margin: 5%;
+    }
 
 }
